TODO/traefik-2.0/traefik-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      hostNetwork: true
      volumes:
        - name: traefik-ingress-configmap
          configMap:
            name: traefik-ingress-configmap
        - name: acme
          hostPath:
            path: /data/traefik/acme
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --configfile=/config/traefik.toml
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: ssl
              containerPort: 443
              hostPort: 443
            - name: admin
              containerPort: 8080
              hostPort: 8080
            - name: postgres
              containerPort: 5432
              hostPort: 5432
          volumeMounts:
           - mountPath: /config
             name: traefik-ingress-configmap
           - mountPath: /acme
             name: acme
