TODO/traefik-2.0/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
