TODO/traefik-2.0/mosquitto-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`mqtt.lab.holaaa.net`)
    services:
    - name: mosquitto
      port: 1883
  tls:
    certResolver: default
    options: {}
    passthrough: false
    options:
      name: default
      namespace: mosquitto
