TODO/traefik-2.0/tcproute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`*`)
    services:
    - name: postgresql-svc
      port: 5432
  tls:
    passthrough: false
    certResolver: default
    options: {}
    options:
      name: default
      namespace: default
